--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "proj_init_dev_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
