--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "build": "cd client; npm run build",
     "test": "node_modules/.bin/tape test/*.js",
-    "dev": "webpack --watch & nodemon server.js"
+    "dev": "concurrently 'cd client; npm start' 'nodemon server.js'",
+    "prod": "NODE_ENV=production node server.js",
+    "postinstall": "cd client; npm install"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,8 @@
   },
   "homepage": "https://github.com/xezian/project-init#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
     "express": "^4.16.2",
     "mysql2": "^1.5.2",
     "sequelize": "^4.35.0"
