--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "proxy": "http://localhost:3030/",
   "private": true,
   "dependencies": {
+    "google-maps-react": "^1.1.2",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.1"
   },
   "scripts": {
