--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:3030/",
+  "proxy": "http://127.0.0.1:3030/",
   "private": true,
   "dependencies": {
     "google-maps-react": "^1.1.2",
