--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mysql2": "^1.5.2",
+    "react-google-maps": "^9.4.5",
     "sequelize": "^4.35.1"
   },
   "devDependencies": {
