--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "period",
     "database": "proj_init_dev_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "period",
     "database": "proj_init_dev_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
