--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "period",
+    "password": null,
     "database": "proj_init_dev_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
